# datakit-sdk-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/datakit/: __init__.py  profiles.py  stores.py
tests/: test_profiles.py  test_stores.py
