[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datakit-sdk"
version = "0.1.0"
description = "DataKit Python SDK — store discovery and dbt profiles generation"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/infobloxopen/datakit-sdk-python"
Repository = "https://github.com/infobloxopen/datakit-sdk-python"
Issues = "https://github.com/infobloxopen/datakit-sdk-python/issues"

[project.scripts]
dk-profiles = "datakit.profiles:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datakit"]
